<resources>
    <string name="app_name">EatRaw</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="spinner1">지역</string>
    <string name="login">로그인</string>
    <string name="logout">LOGOUT</string>
    <string name="register">회원가입</string>
    <string name="email">Email</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="click_to_login">로그인페이지로</string>
    <!--    <string name="click_to_register">Click to Register</string>-->
    <string name="nick">정보입력</string>
    <string name="nickname">닉네임을 정해주세요</string>
    <string name="thumbNail">프로필 사진</string>
    <string name="hello">환영합니다!</string>
    <string name="review_write">리뷰쓰기</string>
    <string name="your_client_id">445898306997-536v99s1hoakntjbkepl9c8n2vv8hvgv.apps.googleusercontent.com</string>
    <string name="del">회원탈퇴</string>
    <string name="nickname_modify">수정할 닉네임</string>

    <string name="err">→</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_modify">정보 수정</string>
    <string name="my_alarm">알람 설정</string>
    <string name="my_review">나의 리뷰 확인</string>
    <string name="my_center">고객센터</string>
    <string name="my_term">약관 확인</string>
    <string name="admin">관리자페이지</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="price_max">최고가: %s</string>
    <string name="price_min">최저가: %s</string>
    <string name="price_avg">평균가: %s</string>
    <string name="seasons">제철: %s</string>

</resources>
