<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="60dp"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    tools:context=".RegisterActivity"
    >


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/backarrowbtn"
        android:gravity="start|top"
        android:src="@drawable/backarrow" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="133dp"
        android:layout_height="32.86dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#2B99FF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="284dp"
                android:layout_height="48dp"
                android:background="@drawable/login_selector"
                android:hint="@string/email"

                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="284dp"
                android:layout_height="48dp"
                android:background="@drawable/login_selector"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"/>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="284dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_button"
            android:text="@string/register" />
        <View
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/line" />


        <ImageButton
            android:id="@+id/google_rg_login"
            android:layout_width="284dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/google_up_btn" />

    </LinearLayout>


</LinearLayout>