<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regFrg.Nickfragment"
    android:orientation="vertical"
    android:paddingBottom="60dp"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/backarrowbtn"
        android:src="@drawable/backarrow" />

    <TextView
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/nick"
        android:textAlignment="center"
        android:textColor="#2B99FF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:clipToOutline="true"
            android:gravity="center"
            android:outlineProvider="background"
            android:scaleType="centerCrop"
            android:src="@drawable/group_40"></ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nickname"
                android:layout_width="284dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/login_selector"
                android:hint="@string/nickname"
                android:padding="8dp" />



            <Button
                android:id="@+id/nickcheck"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/nickname"
                android:layout_alignEnd="@+id/nickname"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/check_button"
                android:text="중복확인" />

        </RelativeLayout>

        <TextView
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:text="선호 시장 등록"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="284dp"
            android:layout_height="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <View
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/line" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="284dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_button"
            android:text="@string/hello" />
    </LinearLayout>

</LinearLayout>