<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReviewActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:text="My page"
        android:textAlignment="center"
        android:textSize="60px" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:clipToOutline="true"
                android:foregroundGravity="center_vertical"
                android:outlineProvider="background"
                android:scaleType="centerCrop"
                android:src="@drawable/group_40"></ImageView>

            <Button
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="섬네일 수정"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:background="@drawable/modify_button"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https" />

            <TextView
                android:id="@+id/nickhello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="님 반갑습니다."
                android:textSize="30sp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:background="@drawable/line"
        ></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/modify"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="8dp"
                android:paddingLeft="20dp"
                android:text="@string/my_modify"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/arrow1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/backarrowbtn"
                android:gravity="start|top"
                android:src="@drawable/backarrow" />
        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:background="@drawable/line"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/myreview"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="8dp"
                android:paddingLeft="20dp"
                android:text="@string/my_review"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/arrow2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/backarrowbtn"
                android:gravity="start|top"
                android:src="@drawable/backarrow" />
        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:background="@drawable/line"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alarm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="8dp"
                android:paddingLeft="20dp"
                android:text="@string/my_alarm"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/arrow3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/backarrowbtn"
                android:gravity="start|top"
                android:src="@drawable/backarrow" />
        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:background="@drawable/line"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/center"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="8dp"
                android:paddingLeft="20dp"
                android:text="@string/my_center"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/arrow4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/backarrowbtn"
                android:gravity="start|top"
                android:src="@drawable/backarrow" />
        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:background="@drawable/line"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/term"
                android:layout_width="24dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:paddingLeft="20dp"
                android:text="@string/my_term"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/arrow5"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/backarrowbtn"
                android:gravity="start|top"
                android:src="@drawable/backarrow" />
        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:background="@drawable/line"
            ></View>
    </LinearLayout>


</LinearLayout>